Jenkins插件问题未解决

--- a/src/main/webapp/resources/dev/css/overview.css
+++ b/src/main/webapp/resources/dev/css/overview.css
@@ -2,6 +2,7 @@
 @import "release-history.css";
 @import "branch.css";
 @import "config.css";
+@import "../plugin/common/plugin-job.css";
 .background-index {
     width: 100%;
     height: 100%;
